--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   "minimum-stability": "stable",
   "require": {
     "php": ">=8.0",
-    "symfony/http-foundation": "^5.3"
+    "psr/http-message": "^1.0"
   },
   "autoload": {
     "psr-4": {
@@ -28,6 +28,8 @@
     }
   },
   "require-dev": {
+    "nyholm/psr7": "^1.4",
+    "nyholm/psr7-server": "^1.0",
     "phpunit/phpunit": "^9.5"
   }
 }
